FEAT/ index: Começando mudança no conteudo

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Infinity Freelancer</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>Infinity</h2>
+							<p>Desejar buscar oportunidades no Freelancer?<a href="./index.html">Freelancer</a></p>
 						</div>
 					</section>
 
