FEAT/ index: Colocando página no github pages

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Infinity</h2>
-							<p>Desejar buscar oportunidades no Freelancer?<a href="./index.html">Freelancer</a></p>
+							<h2>Transformando Ideias em Realidade</h2>
+							<p>Seja bem-vindo à <a href="./index.html">Infinity</a>, onde a inovação encontra a expertise para criar o extraordinário.</p>
 						</div>
 					</section>
 
@@ -57,8 +57,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Soluções Digitais Sob Medida</h2>
+										<p>Oferecemos serviços de desenvolvimento web personalizado, criando experiências únicas que destacam sua marca e impulsionam resultados.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -69,8 +69,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Transmitindo Mensagens com Estilo</h2>
+										<p>Cada pixel conta uma história. Nossa equipe de designers gráficos transforma conceitos em visuais impactantes, garantindo que sua identidade visual seja tão única quanto sua visão.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -81,8 +81,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major"> Elevando Sua Marca ao Próximo Nível</h2>
+										<p>Não é apenas sobre ser visto; é sobre ser lembrado. Oferecemos estratégias de marketing personalizadas para posicionar sua empresa no topo, destacando seus pontos fortes e alcançando seu público-alvo de maneira eficaz.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -91,8 +91,8 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Desenvolvimento Sob Medida</h2>
+									<p>Utilizamos metodologias ágeis para criar soluções personalizadas que se adaptam às suas necessidades em constante evolução. Seja um site dinâmico ou uma plataforma robusta, estamos aqui para transformar sua visão em realidade.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
