FEAT/ finalizando projeto

--- a/generic.html
+++ b/generic.html
@@ -6,8 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Infinity | Sobre nós</title>
 		<meta charset="utf-8" />
+		<link rel="icon" href="images/logo-infinity-removebg-preview.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -31,10 +32,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="generic.html">Sobre</a></li>
+								<li><a href="elements.html">Funcionamento</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -44,8 +43,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Sobre nós</h2>
+								<p>Conheça nossa filosofia e nossa forma de trabalho.</p>
 							</div>
 						</header>
 
@@ -53,26 +52,29 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+									<h3 class="major">Proposta de Valor</h3>
+									<p>
+										A Infinity, por meio de sua proposta inovadora, redefine a dinâmica do recrutamento de talentos em Tecnologia da Informação (TI), apresentando uma plataforma disruptiva que transcende os desafios tradicionais. Esta plataforma surge como uma ponte estratégica, conectando as demandas tecnológicas dos clientes ao vasto reservatório de talentos existente no setor de TI.
+										Ao adotar essa abordagem singular, a Infinity não apenas agiliza o processo de contratação, mas também endereça a persistente lacuna de habilidades que frequentemente desafia o setor de TI. Ao harmonizar as competências dos profissionais de TI com as exigências específicas de cada projeto, a plataforma oferece uma solução eficaz para as demandas em constante evolução.
+										</p>
 
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+									<p>Essa sinergia entre as necessidades das empresas e as aspirações dos profissionais contribui não apenas para o sucesso individual, mas também para o avanço dinâmico do setor de tecnologia como um todo. Ao proporcionar um ambiente que valoriza a flexibilidade e a eficiência, a Infinity se destaca como uma força catalisadora no cenário de recrutamento de talentos de TI, impulsionando a inovação e a excelência no setor.</p>
 
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h3 class="major">Canais</h3>
+									<p>A Infinity adotará uma abordagem utilizando o site como plataforma central das estratégias de marketing digital. A presença nas mídias sociais será uma ferramenta interativa para ampliar a visibilidade. A integração multicanal oferecerá flexibilidade aos clientes na sua escolha de atendimento divulgada no site. </p>
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img08-generic.jpg" alt="" /></a>
+											<h3 class="major">Social Media</h3>
+											<p>A presença nas redes sociais é algo almejado na infinity com forma de se comunicar com sua comunidade.</p>
+											<a href="#" class="special">Leia Mais</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img09-generic.jpg" alt="" /></a>
+											<h3 class="major">Suporte</h3>
+											<p>A integração multicanal oferecerá flexibilidade aos clientes na sua escolha de atendimento divulgada no site.</p>
+											<a href="#" class="special">Leia Mais</a>
 										</article>
 									</section>
 
@@ -82,46 +84,45 @@
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
+				<section id="footer">
+					<div class="inner">
+						<h2 class="major">Formulário</h2>
+						<p>Sua opinião é importante. estamos abertos à feedbacks e avaliações, para isso mande-nos uma mensagem que será lida por um dos nossos atendimentos.</p>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field">
+									<label for="name">Nome</label>
+									<input type="text" name="name" id="name" />
 								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<div class="field">
+									<label for="email">Email</label>
+									<input type="email" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Mensagem</label>
+									<textarea name="message" id="message" rows="4"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Enviar mensagem" /></li>
 							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+						</form>
+						<ul class="contact">
+							<li class="icon solid fa-home">
+								 Maranguape, CE<br />
+								 Rua Coronel Antônio Botelho de Sousa<br />
+								CEP 61940-005
+							</li>
+							<li class="icon solid fa-phone">(85) 91234-5678</li>
+							<li class="icon solid fa-envelope"><a href="#">infinty@gmail.com.br</a></li>
+							<li class="icon brands fa-facebook-f"><a href="#">facebook.com/infinity</a></li>
+							<li class="icon brands fa-instagram"><a href="#">instagram.com/infinity</a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Copyright. All rights reserved 2023.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</section>
 
 			</div>
 
