--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Infinity</title>
 		<meta charset="utf-8" />
+		<link rel="icon" href="images/logo-infinity-removebg-preview.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -31,10 +32,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="generic.html">Sobre</a></li>
+								<li><a href="elements.html">Funcionamento</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -55,11 +54,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/img01-index.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Soluções Digitais Sob Medida</h2>
 										<p>Oferecemos serviços de desenvolvimento web personalizado, criando experiências únicas que destacam sua marca e impulsionam resultados.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Leia mais</a>
 									</div>
 								</div>
 							</section>
@@ -67,11 +66,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/img02-index.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Transmitindo Mensagens com Estilo</h2>
 										<p>Cada pixel conta uma história. Nossa equipe de designers gráficos transforma conceitos em visuais impactantes, garantindo que sua identidade visual seja tão única quanto sua visão.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Leia mais</a>
 									</div>
 								</div>
 							</section>
@@ -79,11 +78,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/img03-index.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major"> Elevando Sua Marca ao Próximo Nível</h2>
 										<p>Não é apenas sobre ser visto; é sobre ser lembrado. Oferecemos estratégias de marketing personalizadas para posicionar sua empresa no topo, destacando seus pontos fortes e alcançando seu público-alvo de maneira eficaz.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Leia mais</a>
 									</div>
 								</div>
 							</section>
@@ -91,37 +90,35 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Desenvolvimento Sob Medida</h2>
+									<h2 class="major">Relacionamento com clientes</h2>
 									<p>Utilizamos metodologias ágeis para criar soluções personalizadas que se adaptam às suas necessidades em constante evolução. Seja um site dinâmico ou uma plataforma robusta, estamos aqui para transformar sua visão em realidade.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img04-index.jpg" alt="" /></a>
+											<h3 class="major">Suporte individualizado</h3>
+											<p>A Infinity busca por suporte dinâmico com as necessidades de cada cliente, promovendo eficiência e avaliação positiva.</p>
+											<a href="#" class="special">Leia mais</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img05-index.jpg" alt="" /></a>
+											<h3 class="major">Marketing</h3>
+											<p>É incentivado a divulgação da empresa pelos clientes genrando bonificações e privilégios na plataforma.</p>
+											<a href="#" class="special">Leia mais</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img06-index.jpg" alt="" /></a>
+											<h3 class="major">Negociações bem sucedidas</h3>
+											<p>Toda negociação bem sucedida entre clientes e profissionais, destacando-os na plataforma e gerando satisfação mutua.</p>
+											<a href="#" class="special">Leia mais</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/img07-index.jpg" alt="" /></a>
+											<h3 class="major">Comunidade Online</h3>
+											<p> ênfase está em relacionamentos personalizados, compromissos e co-criação, com uma comunidade de atendimento online para feedback pós-vendas.</p>
+											<a href="#" class="special">Leia mais</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									
 								</div>
 							</section>
 
@@ -130,12 +127,12 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<h2 class="major">Formulário</h2>
+							<p>Sua opinião é importante. estamos abertos à feedbacks e avaliações, para isso mande-nos uma mensagem que será lida por um dos nossos atendimentos.</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
+										<label for="name">Nome</label>
 										<input type="text" name="name" id="name" />
 									</div>
 									<div class="field">
@@ -143,28 +140,27 @@
 										<input type="email" name="email" id="email" />
 									</div>
 									<div class="field">
-										<label for="message">Message</label>
+										<label for="message">Mensagem</label>
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Enviar mensagem" /></li>
 								</ul>
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									 Maranguape, CE<br />
+									 Rua Coronel Antônio Botelho de Sousa<br />
+									CEP 61940-005
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(85) 91234-5678</li>
+								<li class="icon solid fa-envelope"><a href="#">infinty@gmail.com.br</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/infinity</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/infinity</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Copyright. All rights reserved 2023.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
